syntax = "proto3";

package BiDirectionalAPI;

option go_package ="Stream/BiDirectionalAPI";

message GreetingBiDirectional{
    string first_name =1;
    string second_name =2;
}

message GreetEveryoneRequest{
    GreetingBiDirectional greeting =1;
}

message GreetEveryoneResponse{
    string result =1;
}


service GreetService{
    // Bi directional streamming
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
   
}